--- a/css/style.css
+++ b/css/style.css
@@ -3733,8 +3733,8 @@ a.btn.disabled, fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #44da82;
-  border-color: #2fd674;
+  background-color: red;
+  border-color: red;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
@@ -7360,6 +7360,10 @@ p {
   position: relative;
   z-index: 1;
   background-attachment: fixed;
+ background-repeat: no-repeat;
+ 
+
+
 }
 #fh5co-header .fh5co-overlay {
   position: absolute;
@@ -7369,7 +7373,10 @@ p {
   bottom: 0;
   width: 100%;
   z-index: 2;
-  background: rgba(68, 218, 130, 0.9);
+  background-color: grey;
+  opacity: .50;
+ 
+
 }
 
 #fh5co-header,
@@ -7462,7 +7469,7 @@ p {
   bottom: 0;
   height: 3px;
   position: absolute;
-  background: #44da82;
+  background: red;
 }
 @media screen and (max-width: 992px) {
   .fh5co-section-heading .fh5co-border {
